# picture-rotation-fixer

./: README.md  pyproject.toml  rotate.py  rotate.spec  test_enhanced.py
.github/: copilot-instructions.md
.github/workflows/: build-and-release.yaml
Formula/: picture-rotation-fixer.rb
